# brainsurf

./: README.md
C++/: CMakeLists.txt  camera_calibration.cpp  mouse_coor_capture.cpp
Python/: Feature detection.txt  calibrate.py  evalFeats.py
